KYLIN-563 bug fix, remove starting tomcat in deploy.sh